# RenderQ

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
cli/: renderq.py
config/: server.yaml  worker.yaml
core/: database.py  models.py  scheduler.py
gui/: main.py  main_window.py
gui/widgets/: __init__.py  job_table.py  settings_dialog.py  worker_table.py
plugins/: __init__.py  aftereffects.py  base.py  registry.py
scripts/ae/: RenderQ.jsx
server/: main.py
src/: __init__.py
src/client/: __init__.py
src/client/cli/: __init__.py
src/client/gui/: __init__.py  main.py  main_window.py  qss.py
src/client/gui/widgets/: __init__.py  job_table.py  log_viewer.py  submit_dialog.py  task_table.py  worker_table.py
src/core/: __init__.py  database.py  events.py  models.py  scheduler.py
src/plugins/: aftereffects.py  base.py  ffmpeg.py  registry.py
src/server/: __init__.py  main.py
src/worker/: __init__.py  agent.py
worker/: agent.py
