[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renderq"
version = "1.0.0"
description = "轻量级渲染队列管理系统"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "RenderQ Team" }
]
keywords = ["render", "queue", "aftereffects", "animation", "vfx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.26.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]
all = [
    "renderq[gui,dev]",
]

[project.scripts]
renderq = "src.client.cli.renderq:main"
renderq-server = "src.server.main:main"
renderq-worker = "src.worker.agent:main"
renderq-gui = "src.client.gui.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/renderq"
Repository = "https://github.com/yourusername/renderq"
Issues = "https://github.com/yourusername/renderq/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
